[package]
name = "wnfsutils"
version = "1.1.3"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wnfs = {git= "https://github.com/wnfs-wg/rs-wnfs.git", tag="wnfs-v0.1.22"}
bytes = "1.4.0"
chrono = "0.4.22"
crc32fast = "1.3.2"
tokio = { version = "1.29.1", features = ["full"] }
rand = "0.8.5"
libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }
kv = "0.24.0"
async-std = "1.12.0"
rand_core = "0.6.4"
serde = "1.0.149"
serde_json = "1.0.89"
anyhow = "1.0.66"
async-trait = "0.1.58"
log = "0.4.14"
sha3 = "0.10"
futures = "0.3"
rsa = "0.9"
rand_chacha = "0.3"
base64 = "0.13.0"